# nbodysim

./: Cargo.toml  build.rs
src/: camera.rs  celestial_body.rs  gfx.rs  instance.rs  light.wgsl  main.rs  render.rs  shader.wgsl  sphere.rs  state.rs  texture.rs
