[package]
name = "nbodysim"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.25"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.11"
pollster = "0.2"
bytemuck = { version = "1.7.2", features = ["derive"] }
tobj = "3.0"
anyhow = "1.0.45"
nalgebra = "0.29.0"

[build-dependencies]
anyhow = "1.0.44"
fs_extra = "1.2.0"
glob = "0.3.0"